<resources>
    <string name="app_name">infinigent consulting</string>
    <string name="NA">N/A</string>
    <string name="IsWrittenRecordAvailablePreview">৬. আপনি যে পণ্য অথবা সুবিধা পেয়েছেন তার \n কোন লিখিত রেকর্ড/ চালান পেয়েছেন কিনা ?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="priview_outlet_info">আউটলেট পরিদর্শন ও তথ্য সংগ্রহ</string>
    <string name="DoesSatisfiedWithSallesOfficerPreview">১১. আপনি কি সেলস অফিসারের \n সেবা প্রদানের মান নিয়ে সন্তুষ্ট ?</string>
    <string name="SallesOfficerVisitingDayPreview">১৩. আপনার আউটলেটে সেলস অফিসার \n কতদিন অন্তর অন্তর আসেন?</string>
    <string name="WillGetAnyDiscountOfferFromDistributorPreview">১৫. ডিস্ট্রিবিউটরের কাছ থেকে কোন ডিসকাউন্ট \n পাওনা আছে কি?(এইচ ভি ও/ হোলসেল প্রযোজ্য)?</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="IsKnownAboutScheme">১. আপনি কি বর্তমান স্কিম সম্পর্কে অবহিত ?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="not_required">প্রযোজ্য না</string>
    <string name="present_scheme_details">২. ( যদি হ্যা ) বর্তমান স্কিমটি কি ?</string>
    <string name="IsFacilitatedByScheme">৪. আপনি কি স্কিম মোতাবেক পণ্য/ সুবিধা পেয়েছেন ?</string>
    <string name="SchemeMediaType">৩. আপনি কিভাবে স্কিম সম্পর্কে জানতে পারেন ?</string>
    <string name="DateOfScheme">৫. কবে পেয়েছেন ?</string>
    <string name="forgotten">মনে নাই</string>
    <string name="IsWrittenRecordAvailable">৬. আপনি যে পণ্য অথবা সুবিধা পেয়েছেন তার কোন লিখিত রেকর্ড/ চালান পেয়েছেন কিনা ?</string>
    <string name="LatestChallanDate">৭. সর্বশেষ চালান প্রাপ্তির তারিখ ?</string>
    <string name="ChallanAmount">৮. সর্বশেষ চালান প্রাপ্তির পরিমান কত ?</string>
    <string name="ChallanType">৯. আপনি কোন ধরনের চালান পাচ্ছেন ?</string>
    <string name="DoesExpiredProductAvailable">১০. দোকানে কোনো মেয়াদ উত্তীর্ণ পণ্য আছে কি ?</string>
    <string name="DoesSatisfiedWithSallesOfficer">১১. আপনি কি সেলস অফিসারের সেবা প্রদানের মান নিয়ে সন্তুষ্ট ?</string>
    <string name="DoesSatisfiedWithProductOrderAndService">১২. পণ্যের অর্ডার এবং প্রাপ্তিতে আপনি কি সন্তুষ্ট ?</string>
    <string name="SallesOfficerVisitingDay">১৩. আপনার আউটলেটে সেলস অফিসার কতদিন অন্তর অন্তর আসেন?</string>
    <string name="day">দিন</string>
    <string name="Month">মাস</string>
    <string name="DoesGotLatestDiscountOffer">১৪. আপনি সর্বশেষ ডিসকাউন্ট সুবিধা পেয়াছেন কি ?</string>
    <string name="WillGetAnyDiscountOfferFromDistributor">১৫. ডিস্ট্রিবিউটরের কাছ থেকে কোন ডিসকাউন্ট পাওনা আছে কি?(এইচ ভি ও/ হোলসেল প্রযোজ্য)?</string>
    <string name="DoesCocaColaLabelAvailable">১৬. চালানে কোকা-কোলার লোগো আছে কিনা ??</string>
    <string name="IsGccCodeAvailable">১৭. আউটলেটে জি সি সি কোড আছে কিনা ?</string>
    <string name="CommentsType">মন্তব্যর ধরন</string>
    <string name="comment">মন্তব্য</string>
    <string name="other_comments">অন্যান্য মন্তব্য</string>
    <string name="date">তারিখ</string>
    <string name="input_hygiene_audit">Input Hygiene Audit</string>
    <string name="view_audited_scheme">View Audited Scheme</string>
    <string name="signature">স্বাক্ষর</string>
    <string name="shop_image">দোকানের ছবি</string>
    <string name="preview">Preview</string>
    <string name="submit">Submit</string>
    <string name="outlet_name">আউটলেটের নাম</string>
    <string name="retailer_code">খুচরা বিক্রেতার কোড</string>
    <string name="retailer_name">খুচরা বিক্রেতার নাম</string>
    <string name="mobile_no">মোবাইল নাম্বার</string>
    <string name="outlet_type">আউটলেটের ধরন</string>
    <string name="distributor_name">ডিস্ট্রিবিউটরের নাম</string>
    <string name="aic_name">এ আই সি নাম</string>
    <string name="asm_name">A S M নাম</string>
    <string name="outlet_address">আউটলেটের ঠিকানা</string>
    <string name="input_scheme_audit">Input Scheme Audit</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="retailer_gcc_code">খুচরা বিক্রেতার জি সি সি কোড</string>
    <string name="status">STATUS</string>
    <string name="audited_scheme_details">Audited Scheme Details</string>
    <string name="details">Details</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="number">Number</string>
</resources>